recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  avance(longueur)
  gauche(angle)
  spiral(steps-1,90,length+increment,increment)
}